# poc-deployment

cicd/ui_service/: .gitignore  Dockerfile  app.py  config.py  pyproject.toml
cicd/ui_service/.github/workflows/: cicd.yml
cicd/ui_service/manifests/: deployment.yml  service.yml
